# libstargazer

./: CMakeLists.txt  ProjectHome.md  SConstruct~  StarGazer.cpp  demo.cpp  learn_stargazer_map.cpp  manifest.xml
trunk/: CMakeLists.txt  README  SConstruct  StarGazer.cpp  StarGazer.hpp  demo.cpp  learn_stargazer_map.cpp
trunk/site_scons/: easy_environment.py
